--- a/basicStyling.css
+++ b/basicStyling.css
@@ -1,6 +1,9 @@
 /* Foundational CSS */ 
 body {
-   font-family: Arial, sans-serif;
+   background: rgb(46, 38, 36); 
+   color: #FFF8DC;
+   padding: 10px;
+   font-family: "Lucida Console", Monaco, monospace;
 }
 
 #app {
@@ -10,6 +13,7 @@ body {
 
 .compose, .inbox {
    margin-top: 20px;
+   margin-bottom: 0px; 
 }
 
 form {
@@ -17,12 +21,43 @@ form {
    flex-direction: column;
 }
 
-form input, form textarea, form button {
+form input, form textarea {
+   background-color: #FFF8DC;
    margin-top: 10px;
    padding: 10px;
    font-size: 16px;
 }
 
 #emails {
-   margin-top: 20px;
+   margin-top: 0px;
+}
+
+.container {
+  display: flex;
+  flex: 0 0 auto;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+  border: none;
+ }
+ 
+ .button-send { 
+   background-color: palegoldenrod;
+   border: 1px solid rgba(27, 31, 35, .15);
+   border-radius: 6px;
+   box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+   box-sizing: border-box;
+   display: inline-block;
+   font-family: "Lucida Console", Monaco, monospace;
+   font-size: 14px;
+   font-weight: 600;
+   line-height: 20px;
+   padding: 6px 16px;
+   position: relative;
+   text-align: center;
+   text-decoration: none;
+}
+
+.button-send:hover {
+   text-decoration: underline;
 }
