--- a/styling/login.css
+++ b/styling/login.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
    display: flex;
    flex: 0 0 auto;
    justify-content: center;
@@ -26,4 +26,4 @@
  
  .button:hover {
     text-decoration: underline;
- }
+ } */
