--- a/styling/basic.css
+++ b/styling/basic.css
@@ -2,18 +2,23 @@
 body {
    background: rgb(46, 38, 36); 
    color: #FFF8DC;
-   padding: 10px;
    font-family: "Lucida Console", Monaco, monospace;
+}
+
+/* Headings */ 
+h1 { 
+   text-decoration: underline;
+}
+h2 { 
+   margin-top: -12px;
+}
+h3 { 
+   margin-top: 50px;
 }
 
 #app {
    max-width: 800px;
    margin: 0 auto;
-}
-
-.compose, .inbox {
-   margin-top: 0px;
-   margin-bottom: 5px; 
 }
 
 form {
@@ -63,6 +68,7 @@ form input, form textarea {
    text-align: center;
    text-decoration: none;
 }
+
 .button:hover {
    text-decoration: underline;
 }
