--- a/styling/basic.css
+++ b/styling/basic.css
@@ -31,6 +31,7 @@ form {
 }
 
 form input, form textarea {
+   resize: none; 
    background-color: #FFF8DC;
    margin-top: 10px;
    padding: 10px;
